--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>YummyGo</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -19,12 +21,9 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a
-          class="navbar-brand text-dark fs-3 fw-bold"
-          href="{{ url_for('auth.home') }}"
-        >
+        <a class="navbar-brand fs-3 fw-bold" href="{{ url_for('auth.home') }}">
           Yummy<span class="text-danger">Go</span> 🍔
         </a>
 
@@ -46,60 +45,44 @@
 
             <li class="nav-item">
               <a
-                class="nav-link text-dark fw-bold"
+                class="nav-link fw-bold"
                 href="{{ url_for('auth.view_cart') }}"
-                >🛒 Meu Carrinho</a
               >
+                <i class="fas fa-shopping-cart"></i> Meu Carrinho
+              </a>
             </li>
 
             {% if current_user.role == 'restaurante' %}
             <li class="nav-item">
-              <a
-                class="nav-link text-dark"
-                href="{{ url_for('restaurant.dashboard') }}"
+              <a class="nav-link" href="{{ url_for('restaurant.dashboard') }}"
                 >Meu Portal</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link text-dark"
-                href="{{ url_for('restaurant.manage_menu') }}"
-                >Meu Cardápio</a
               >
             </li>
             {% else %}
             <li class="nav-item">
-              <a
-                class="nav-link text-dark"
-                href="{{ url_for('client.profile') }}"
+              <a class="nav-link" href="{{ url_for('client.profile') }}"
                 >Meu Perfil</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-dark"
-                href="{{ url_for('restaurant.register') }}"
+              <a class="nav-link" href="{{ url_for('restaurant.register') }}"
                 >Seja um Parceiro</a
               >
             </li>
             {% endif %}
 
             <li class="nav-item">
-              <a class="nav-link text-dark" href="{{ url_for('auth.logout') }}"
-                >Logout ({{ current_user.nome_completo }})</a
+              <a class="nav-link" href="{{ url_for('auth.logout') }}"
+                >Logout ({{ current_user.nome_completo.split()[0] }})</a
               >
             </li>
 
             {% else %}
             <li class="nav-item">
-              <a class="nav-link text-dark" href="{{ url_for('auth.login') }}"
-                >Entrar</a
-              >
+              <a class="nav-link" href="{{ url_for('auth.login') }}">Entrar</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-dark"
-                href="{{ url_for('auth.register') }}"
+              <a class="nav-link" href="{{ url_for('auth.register') }}"
                 >Registo</a
               >
             </li>
@@ -109,7 +92,7 @@
       </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4" style="min-height: 80vh">
       {% with messages = get_flashed_messages(with_categories=true) %} {% if
       messages %} {% for category, message in messages %} {% set bs_class = {
       'success': 'alert-success', 'danger': 'alert-danger', 'info': 'alert-info'
@@ -133,5 +116,6 @@
     {% include '_footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/address_form.js') }}"></script>
   </body>
 </html>
