--- a/src/modules/client/templates/order_history.html
+++ b/src/modules/client/templates/order_history.html
@@ -37,6 +37,7 @@
           </div>
 
           <div>
+            {% if pedido.status != 'Concluído' %}
             <a
               href="{{ url_for('client.track_order', pedido_id=pedido.id) }}"
               class="btn btn-sm btn-outline-purple fw-bold me-2"
@@ -47,6 +48,14 @@
             >
               <i class="fas fa-map-marked-alt me-1"></i> Acompanhar
             </a>
+            {% endif %} {% if pedido.status == 'Concluído' %}
+            <a
+              href="{{ url_for('client.review_order', pedido_id=pedido.id) }}"
+              class="btn btn-sm btn-warning fw-bold me-2 text-dark"
+            >
+              <i class="fas fa-star me-1"></i> Avaliar
+            </a>
+            {% endif %}
 
             <a
               href="{{ url_for('client.download_invoice', pedido_id=pedido.id) }}"
